// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`selectFile returns a state object 1`] = `
Object {
  "payload": Object {
    "file": File {},
  },
  "type": "SELECT_UPLOAD_FILE",
}
`;

exports[`uploadProgress returns a state object 1`] = `
Object {
  "payload": Object {
    "progress": 60,
  },
  "type": "UPLOAD_PROGRESS",
}
`;

exports[`uploadRequest returns a state object 1`] = `
Object {
  "meta": Object {
    "file": File {},
    "notifications": Object {
      "rejected": Object {
        "title": "Failed to upload file",
        "variant": "danger",
      },
    },
  },
  "payload": Promise {},
  "type": "UPLOAD_REQUEST",
}
`;
